package com.tometrics.api.services.commongrpc.models.garden

import com.tometrics.api.services.protos.GrowingTip

enum class GrpcGrowingTip {
    PRUNE_SUCKERS,
    PROVIDE_SUPPORT,
    MULCH_SOIL,
    WATER_AT_BASE,
    CROP_ROTATION,
    HILL_SOIL,
    PLANT_DEEP,
    AVOID_LIGHT_EXPOSURE,
    HARVEST_AFTER_FLOWERING,
    COOL_STORAGE,
    LOOSEN_SOIL,
    THIN_SEEDLINGS,
    CONSISTENT_MOISTURE,
    AVOID_ROCKY_SOIL,
    PREVENT_GREENING,
    PLANT_TIPS_UP,
    REDUCE_WATERING_AT_MATURITY,
    CURE_AFTER_HARVEST,
    DAY_LENGTH_SENSITIVE,
    SUPPORT_WHEN_FRUITING,
    HARVEST_WHEN_FIRM,
    PREVENT_BLOSSOM_END_ROT,
    PRODUCES_UNTIL_FROST,
    SUCCESSION_PLANTING,
    DIRECT_SOW,
    COLD_HARDY,
    HEAT_SENSITIVE,
    HEAT_TOLERANT,
    PINCH_FLOWERS,
    DEADHEAD,
    REQUIRES_POLLINATION,
    HAND_POLLINATE,
    AVOID_OVERHEAD_WATERING,
    PLANT_IN_BLOCKS,
    HARVEST_REGULARLY,
    BLANCHING,
    ACIDIC_SOIL,
    ALKALINE_SOIL,
    DEEP_ROOT_SYSTEM,
    SHALLOW_ROOT_SYSTEM,
    MOUND_PLANTING,
    TRENCH_PLANTING,
    REQUIRES_STAKING,
    NITROGEN_FIXING,
    CUT_AND_COME_AGAIN,
    PERENNIAL_CROP,
    HARVEST_SELECTIVELY,
    DROUGHT_RESISTANT,
    AVOID_TRANSPLANTING,
    COMPANION_BENEFICIAL,
    SHADE_TOLERANT,
    EARLY_SPRING_CROP,
    FALL_CROP,
    OVERWINTER,
    COOL_WEATHER_CROP,
    REMOVE_LOWER_LEAVES,
    FERTILE_SOIL,
    NEEDS_SUPPORT_CAGE,
    FLOATING_ROW_COVER,
    SLOW_TO_GERMINATE,
    SOAK_SEEDS,
    PINCH_GROWING_TIPS,
    STRATIFICATION,
    START_INDOORS,
    LOOSE_SOIL,
    HARVEST_WHEN_SMALL,
    MINIMAL_COMPANIONS,
    FROST_IMPROVES_FLAVOR,
    AVOID_HARVESTING_FIRST_YEAR,
    REMOVE_FLOWER_STALKS,
    DIVIDE_EVERY_FEW_YEARS,
    DIVIDE_BULBS,
    NEEDS_CONSTANT_MOISTURE,
    AQUATIC_FRIENDLY,
    HARVEST_AFTER_FROST,
    CONTAIN_SPREAD,
    NEEDS_SPACE,
    FULL_MATURITY_FOR_STORAGE,
    HARVEST_IN_FALL_OR_SPRING,
    NEEDS_LONG_SEASON,
    PROPER_PROCESSING_REQUIRED,
    SUBMERGED_PLANTING,
    SPECIAL_GROWING_CONDITIONS,
    SLOW_GROWING,
    WAIT_FOR_WARM_SOIL,
    AVOID_RICH_SOIL,
    SHALLOW_PLANTING,
    EDIBLE_ROOTS_ONLY,
    LONG_GROWING_SEASON,
    PREVENT_FLOWERING,
    ACIDIC_FLAVOR,
    CELERY_FLAVOR,
    SIMILAR_TO_ARTICHOKE,
    INVASIVE_TENDENCIES,
    PEST_RESISTANT,
    COLORFUL_TUBERS,
    PLANT_WHOLE_FRUIT,
    PERENNIAL_IN_TROPICS,
    MEDICINAL_PROPERTIES,
    EDIBLE_WHEN_YOUNG,
    DRY_FOR_SPONGES,
    ALL_PARTS_EDIBLE,
    NUTRITIOUS_LEAVES,
    TREE_VEGETABLE,
    PLANT_MULTIPLES,
    HARVEST_WHEN_HUSKS_SPLIT,
    REMOVE_HUSKS_BEFORE_USE,
    SAPONIN_REMOVAL,
    EDIBLE_LEAVES,
    GRAIN_AND_LEAF_CROP,
    QUICK_GROWING,
    EXCELLENT_COVER_CROP,
    ATTRACTS_POLLINATORS,
    IMPROVES_SOIL,
    SEED_CLEANING_REQUIRED,
    BIRD_PROTECTION_NEEDED,
    OIL_AND_FIBER_CROP,
    HARVEST_FOR_SEEDS,
    FORCED_FOR_CHICONS,
    COFFEE_SUBSTITUTE,
    BITTER_FLAVOR,
    MULTIPLE_ROOTS,
    SWEET_FLAVOR,
    MULTI_USE_PLANT,
    SPINACH_SUBSTITUTE,
    SLOW_TO_ESTABLISH,
    COASTAL_NATIVE,
    SALT_TOLERANT,
    HARVEST_STEMS_AND_LEAVES,
    HEAT_TOLERANT_BRASSICA,
    EDIBLE_FLOWERS,
    PEST_DETERRENT,
    COLORFUL_LEAVES,
    SELF_SEEDING,
    HUMIDITY_TOLERANT,
    MUCILAGINOUS_TEXTURE,
    FAST_GROWING,
    SHORT_DAY_TUBER_FORMATION,
    BIRD_PROTECTION,
    INOCULANT_BENEFICIAL,
    DROUGHT_TOLERANT;

    fun toNetwork(): GrowingTip = when (this) {
        PRUNE_SUCKERS -> GrowingTip.PRUNE_SUCKERS
        PROVIDE_SUPPORT -> GrowingTip.PROVIDE_SUPPORT
        MULCH_SOIL -> GrowingTip.MULCH_SOIL
        WATER_AT_BASE -> GrowingTip.WATER_AT_BASE
        CROP_ROTATION -> GrowingTip.CROP_ROTATION
        HILL_SOIL -> GrowingTip.HILL_SOIL
        PLANT_DEEP -> GrowingTip.PLANT_DEEP
        AVOID_LIGHT_EXPOSURE -> GrowingTip.AVOID_LIGHT_EXPOSURE
        HARVEST_AFTER_FLOWERING -> GrowingTip.HARVEST_AFTER_FLOWERING
        COOL_STORAGE -> GrowingTip.COOL_STORAGE
        LOOSEN_SOIL -> GrowingTip.LOOSEN_SOIL
        THIN_SEEDLINGS -> GrowingTip.THIN_SEEDLINGS
        CONSISTENT_MOISTURE -> GrowingTip.CONSISTENT_MOISTURE
        AVOID_ROCKY_SOIL -> GrowingTip.AVOID_ROCKY_SOIL
        PREVENT_GREENING -> GrowingTip.PREVENT_GREENING
        PLANT_TIPS_UP -> GrowingTip.PLANT_TIPS_UP
        REDUCE_WATERING_AT_MATURITY -> GrowingTip.REDUCE_WATERING_AT_MATURITY
        CURE_AFTER_HARVEST -> GrowingTip.CURE_AFTER_HARVEST
        DAY_LENGTH_SENSITIVE -> GrowingTip.DAY_LENGTH_SENSITIVE
        SUPPORT_WHEN_FRUITING -> GrowingTip.SUPPORT_WHEN_FRUITING
        HARVEST_WHEN_FIRM -> GrowingTip.HARVEST_WHEN_FIRM
        PREVENT_BLOSSOM_END_ROT -> GrowingTip.PREVENT_BLOSSOM_END_ROT
        PRODUCES_UNTIL_FROST -> GrowingTip.PRODUCES_UNTIL_FROST
        SUCCESSION_PLANTING -> GrowingTip.SUCCESSION_PLANTING
        DIRECT_SOW -> GrowingTip.DIRECT_SOW
        COLD_HARDY -> GrowingTip.COLD_HARDY
        HEAT_SENSITIVE -> GrowingTip.HEAT_SENSITIVE
        HEAT_TOLERANT -> GrowingTip.HEAT_TOLERANT
        PINCH_FLOWERS -> GrowingTip.PINCH_FLOWERS
        DEADHEAD -> GrowingTip.DEADHEAD
        REQUIRES_POLLINATION -> GrowingTip.REQUIRES_POLLINATION
        HAND_POLLINATE -> GrowingTip.HAND_POLLINATE
        AVOID_OVERHEAD_WATERING -> GrowingTip.AVOID_OVERHEAD_WATERING
        PLANT_IN_BLOCKS -> GrowingTip.PLANT_IN_BLOCKS
        HARVEST_REGULARLY -> GrowingTip.HARVEST_REGULARLY
        BLANCHING -> GrowingTip.BLANCHING
        ACIDIC_SOIL -> GrowingTip.ACIDIC_SOIL
        ALKALINE_SOIL -> GrowingTip.ALKALINE_SOIL
        DEEP_ROOT_SYSTEM -> GrowingTip.DEEP_ROOT_SYSTEM
        SHALLOW_ROOT_SYSTEM -> GrowingTip.SHALLOW_ROOT_SYSTEM
        MOUND_PLANTING -> GrowingTip.MOUND_PLANTING
        TRENCH_PLANTING -> GrowingTip.TRENCH_PLANTING
        REQUIRES_STAKING -> GrowingTip.REQUIRES_STAKING
        NITROGEN_FIXING -> GrowingTip.NITROGEN_FIXING
        CUT_AND_COME_AGAIN -> GrowingTip.CUT_AND_COME_AGAIN
        PERENNIAL_CROP -> GrowingTip.PERENNIAL_CROP
        HARVEST_SELECTIVELY -> GrowingTip.HARVEST_SELECTIVELY
        DROUGHT_RESISTANT -> GrowingTip.DROUGHT_RESISTANT
        AVOID_TRANSPLANTING -> GrowingTip.AVOID_TRANSPLANTING
        COMPANION_BENEFICIAL -> GrowingTip.COMPANION_BENEFICIAL
        SHADE_TOLERANT -> GrowingTip.SHADE_TOLERANT
        EARLY_SPRING_CROP -> GrowingTip.EARLY_SPRING_CROP
        FALL_CROP -> GrowingTip.FALL_CROP
        OVERWINTER -> GrowingTip.OVERWINTER
        COOL_WEATHER_CROP -> GrowingTip.COOL_WEATHER_CROP
        REMOVE_LOWER_LEAVES -> GrowingTip.REMOVE_LOWER_LEAVES
        FERTILE_SOIL -> GrowingTip.FERTILE_SOIL
        NEEDS_SUPPORT_CAGE -> GrowingTip.NEEDS_SUPPORT_CAGE
        FLOATING_ROW_COVER -> GrowingTip.FLOATING_ROW_COVER
        SLOW_TO_GERMINATE -> GrowingTip.SLOW_TO_GERMINATE
        SOAK_SEEDS -> GrowingTip.SOAK_SEEDS
        PINCH_GROWING_TIPS -> GrowingTip.PINCH_GROWING_TIPS
        STRATIFICATION -> GrowingTip.STRATIFICATION
        START_INDOORS -> GrowingTip.START_INDOORS
        LOOSE_SOIL -> GrowingTip.LOOSE_SOIL
        HARVEST_WHEN_SMALL -> GrowingTip.HARVEST_WHEN_SMALL
        MINIMAL_COMPANIONS -> GrowingTip.MINIMAL_COMPANIONS
        FROST_IMPROVES_FLAVOR -> GrowingTip.FROST_IMPROVES_FLAVOR
        AVOID_HARVESTING_FIRST_YEAR -> GrowingTip.AVOID_HARVESTING_FIRST_YEAR
        REMOVE_FLOWER_STALKS -> GrowingTip.REMOVE_FLOWER_STALKS
        DIVIDE_EVERY_FEW_YEARS -> GrowingTip.DIVIDE_EVERY_FEW_YEARS
        DIVIDE_BULBS -> GrowingTip.DIVIDE_BULBS
        NEEDS_CONSTANT_MOISTURE -> GrowingTip.NEEDS_CONSTANT_MOISTURE
        AQUATIC_FRIENDLY -> GrowingTip.AQUATIC_FRIENDLY
        HARVEST_AFTER_FROST -> GrowingTip.HARVEST_AFTER_FROST
        CONTAIN_SPREAD -> GrowingTip.CONTAIN_SPREAD
        NEEDS_SPACE -> GrowingTip.NEEDS_SPACE
        FULL_MATURITY_FOR_STORAGE -> GrowingTip.FULL_MATURITY_FOR_STORAGE
        HARVEST_IN_FALL_OR_SPRING -> GrowingTip.HARVEST_IN_FALL_OR_SPRING
        NEEDS_LONG_SEASON -> GrowingTip.NEEDS_LONG_SEASON
        PROPER_PROCESSING_REQUIRED -> GrowingTip.PROPER_PROCESSING_REQUIRED
        SUBMERGED_PLANTING -> GrowingTip.SUBMERGED_PLANTING
        SPECIAL_GROWING_CONDITIONS -> GrowingTip.SPECIAL_GROWING_CONDITIONS
        SLOW_GROWING -> GrowingTip.SLOW_GROWING
        WAIT_FOR_WARM_SOIL -> GrowingTip.WAIT_FOR_WARM_SOIL
        AVOID_RICH_SOIL -> GrowingTip.AVOID_RICH_SOIL
        SHALLOW_PLANTING -> GrowingTip.SHALLOW_PLANTING
        EDIBLE_ROOTS_ONLY -> GrowingTip.EDIBLE_ROOTS_ONLY
        LONG_GROWING_SEASON -> GrowingTip.LONG_GROWING_SEASON
        PREVENT_FLOWERING -> GrowingTip.PREVENT_FLOWERING
        ACIDIC_FLAVOR -> GrowingTip.ACIDIC_FLAVOR
        CELERY_FLAVOR -> GrowingTip.CELERY_FLAVOR
        SIMILAR_TO_ARTICHOKE -> GrowingTip.SIMILAR_TO_ARTICHOKE
        INVASIVE_TENDENCIES -> GrowingTip.INVASIVE_TENDENCIES
        PEST_RESISTANT -> GrowingTip.PEST_RESISTANT
        COLORFUL_TUBERS -> GrowingTip.COLORFUL_TUBERS
        PLANT_WHOLE_FRUIT -> GrowingTip.PLANT_WHOLE_FRUIT
        PERENNIAL_IN_TROPICS -> GrowingTip.PERENNIAL_IN_TROPICS
        MEDICINAL_PROPERTIES -> GrowingTip.MEDICINAL_PROPERTIES
        EDIBLE_WHEN_YOUNG -> GrowingTip.EDIBLE_WHEN_YOUNG
        DRY_FOR_SPONGES -> GrowingTip.DRY_FOR_SPONGES
        ALL_PARTS_EDIBLE -> GrowingTip.ALL_PARTS_EDIBLE
        NUTRITIOUS_LEAVES -> GrowingTip.NUTRITIOUS_LEAVES
        TREE_VEGETABLE -> GrowingTip.TREE_VEGETABLE
        PLANT_MULTIPLES -> GrowingTip.PLANT_MULTIPLES
        HARVEST_WHEN_HUSKS_SPLIT -> GrowingTip.HARVEST_WHEN_HUSKS_SPLIT
        REMOVE_HUSKS_BEFORE_USE -> GrowingTip.REMOVE_HUSKS_BEFORE_USE
        SAPONIN_REMOVAL -> GrowingTip.SAPONIN_REMOVAL
        EDIBLE_LEAVES -> GrowingTip.EDIBLE_LEAVES
        GRAIN_AND_LEAF_CROP -> GrowingTip.GRAIN_AND_LEAF_CROP
        QUICK_GROWING -> GrowingTip.QUICK_GROWING
        EXCELLENT_COVER_CROP -> GrowingTip.EXCELLENT_COVER_CROP
        ATTRACTS_POLLINATORS -> GrowingTip.ATTRACTS_POLLINATORS
        IMPROVES_SOIL -> GrowingTip.IMPROVES_SOIL
        SEED_CLEANING_REQUIRED -> GrowingTip.SEED_CLEANING_REQUIRED
        BIRD_PROTECTION_NEEDED -> GrowingTip.BIRD_PROTECTION_NEEDED
        OIL_AND_FIBER_CROP -> GrowingTip.OIL_AND_FIBER_CROP
        HARVEST_FOR_SEEDS -> GrowingTip.HARVEST_FOR_SEEDS
        FORCED_FOR_CHICONS -> GrowingTip.FORCED_FOR_CHICONS
        COFFEE_SUBSTITUTE -> GrowingTip.COFFEE_SUBSTITUTE
        BITTER_FLAVOR -> GrowingTip.BITTER_FLAVOR
        MULTIPLE_ROOTS -> GrowingTip.MULTIPLE_ROOTS
        SWEET_FLAVOR -> GrowingTip.SWEET_FLAVOR
        MULTI_USE_PLANT -> GrowingTip.MULTI_USE_PLANT
        SPINACH_SUBSTITUTE -> GrowingTip.SPINACH_SUBSTITUTE
        SLOW_TO_ESTABLISH -> GrowingTip.SLOW_TO_ESTABLISH
        COASTAL_NATIVE -> GrowingTip.COASTAL_NATIVE
        SALT_TOLERANT -> GrowingTip.SALT_TOLERANT
        HARVEST_STEMS_AND_LEAVES -> GrowingTip.HARVEST_STEMS_AND_LEAVES
        HEAT_TOLERANT_BRASSICA -> GrowingTip.HEAT_TOLERANT_BRASSICA
        EDIBLE_FLOWERS -> GrowingTip.EDIBLE_FLOWERS
        PEST_DETERRENT -> GrowingTip.PEST_DETERRENT
        COLORFUL_LEAVES -> GrowingTip.COLORFUL_LEAVES
        SELF_SEEDING -> GrowingTip.SELF_SEEDING
        HUMIDITY_TOLERANT -> GrowingTip.HUMIDITY_TOLERANT
        MUCILAGINOUS_TEXTURE -> GrowingTip.MUCILAGINOUS_TEXTURE
        FAST_GROWING -> GrowingTip.FAST_GROWING
        SHORT_DAY_TUBER_FORMATION -> GrowingTip.SHORT_DAY_TUBER_FORMATION
        BIRD_PROTECTION -> GrowingTip.BIRD_PROTECTION
        INOCULANT_BENEFICIAL -> GrowingTip.INOCULANT_BENEFICIAL
        DROUGHT_TOLERANT -> GrowingTip.DROUGHT_TOLERANT
    }

    companion object {
        fun fromNetwork(network: GrowingTip): GrpcGrowingTip = when (network) {
            GrowingTip.PRUNE_SUCKERS -> PRUNE_SUCKERS
            GrowingTip.PROVIDE_SUPPORT -> PROVIDE_SUPPORT
            GrowingTip.MULCH_SOIL -> MULCH_SOIL
            GrowingTip.WATER_AT_BASE -> WATER_AT_BASE
            GrowingTip.CROP_ROTATION -> CROP_ROTATION
            GrowingTip.HILL_SOIL -> HILL_SOIL
            GrowingTip.PLANT_DEEP -> PLANT_DEEP
            GrowingTip.AVOID_LIGHT_EXPOSURE -> AVOID_LIGHT_EXPOSURE
            GrowingTip.HARVEST_AFTER_FLOWERING -> HARVEST_AFTER_FLOWERING
            GrowingTip.COOL_STORAGE -> COOL_STORAGE
            GrowingTip.LOOSEN_SOIL -> LOOSEN_SOIL
            GrowingTip.THIN_SEEDLINGS -> THIN_SEEDLINGS
            GrowingTip.CONSISTENT_MOISTURE -> CONSISTENT_MOISTURE
            GrowingTip.AVOID_ROCKY_SOIL -> AVOID_ROCKY_SOIL
            GrowingTip.PREVENT_GREENING -> PREVENT_GREENING
            GrowingTip.PLANT_TIPS_UP -> PLANT_TIPS_UP
            GrowingTip.REDUCE_WATERING_AT_MATURITY -> REDUCE_WATERING_AT_MATURITY
            GrowingTip.CURE_AFTER_HARVEST -> CURE_AFTER_HARVEST
            GrowingTip.DAY_LENGTH_SENSITIVE -> DAY_LENGTH_SENSITIVE
            GrowingTip.SUPPORT_WHEN_FRUITING -> SUPPORT_WHEN_FRUITING
            GrowingTip.HARVEST_WHEN_FIRM -> HARVEST_WHEN_FIRM
            GrowingTip.PREVENT_BLOSSOM_END_ROT -> PREVENT_BLOSSOM_END_ROT
            GrowingTip.PRODUCES_UNTIL_FROST -> PRODUCES_UNTIL_FROST
            GrowingTip.SUCCESSION_PLANTING -> SUCCESSION_PLANTING
            GrowingTip.DIRECT_SOW -> DIRECT_SOW
            GrowingTip.COLD_HARDY -> COLD_HARDY
            GrowingTip.HEAT_SENSITIVE -> HEAT_SENSITIVE
            GrowingTip.HEAT_TOLERANT -> HEAT_TOLERANT
            GrowingTip.PINCH_FLOWERS -> PINCH_FLOWERS
            GrowingTip.DEADHEAD -> DEADHEAD
            GrowingTip.REQUIRES_POLLINATION -> REQUIRES_POLLINATION
            GrowingTip.HAND_POLLINATE -> HAND_POLLINATE
            GrowingTip.AVOID_OVERHEAD_WATERING -> AVOID_OVERHEAD_WATERING
            GrowingTip.PLANT_IN_BLOCKS -> PLANT_IN_BLOCKS
            GrowingTip.HARVEST_REGULARLY -> HARVEST_REGULARLY
            GrowingTip.BLANCHING -> BLANCHING
            GrowingTip.ACIDIC_SOIL -> ACIDIC_SOIL
            GrowingTip.ALKALINE_SOIL -> ALKALINE_SOIL
            GrowingTip.DEEP_ROOT_SYSTEM -> DEEP_ROOT_SYSTEM
            GrowingTip.SHALLOW_ROOT_SYSTEM -> SHALLOW_ROOT_SYSTEM
            GrowingTip.MOUND_PLANTING -> MOUND_PLANTING
            GrowingTip.TRENCH_PLANTING -> TRENCH_PLANTING
            GrowingTip.REQUIRES_STAKING -> REQUIRES_STAKING
            GrowingTip.NITROGEN_FIXING -> NITROGEN_FIXING
            GrowingTip.CUT_AND_COME_AGAIN -> CUT_AND_COME_AGAIN
            GrowingTip.PERENNIAL_CROP -> PERENNIAL_CROP
            GrowingTip.HARVEST_SELECTIVELY -> HARVEST_SELECTIVELY
            GrowingTip.DROUGHT_RESISTANT -> DROUGHT_RESISTANT
            GrowingTip.AVOID_TRANSPLANTING -> AVOID_TRANSPLANTING
            GrowingTip.COMPANION_BENEFICIAL -> COMPANION_BENEFICIAL
            GrowingTip.SHADE_TOLERANT -> SHADE_TOLERANT
            GrowingTip.EARLY_SPRING_CROP -> EARLY_SPRING_CROP
            GrowingTip.FALL_CROP -> FALL_CROP
            GrowingTip.OVERWINTER -> OVERWINTER
            GrowingTip.COOL_WEATHER_CROP -> COOL_WEATHER_CROP
            GrowingTip.REMOVE_LOWER_LEAVES -> REMOVE_LOWER_LEAVES
            GrowingTip.FERTILE_SOIL -> FERTILE_SOIL
            GrowingTip.NEEDS_SUPPORT_CAGE -> NEEDS_SUPPORT_CAGE
            GrowingTip.FLOATING_ROW_COVER -> FLOATING_ROW_COVER
            GrowingTip.SLOW_TO_GERMINATE -> SLOW_TO_GERMINATE
            GrowingTip.SOAK_SEEDS -> SOAK_SEEDS
            GrowingTip.PINCH_GROWING_TIPS -> PINCH_GROWING_TIPS
            GrowingTip.STRATIFICATION -> STRATIFICATION
            GrowingTip.START_INDOORS -> START_INDOORS
            GrowingTip.LOOSE_SOIL -> LOOSE_SOIL
            GrowingTip.HARVEST_WHEN_SMALL -> HARVEST_WHEN_SMALL
            GrowingTip.MINIMAL_COMPANIONS -> MINIMAL_COMPANIONS
            GrowingTip.FROST_IMPROVES_FLAVOR -> FROST_IMPROVES_FLAVOR
            GrowingTip.AVOID_HARVESTING_FIRST_YEAR -> AVOID_HARVESTING_FIRST_YEAR
            GrowingTip.REMOVE_FLOWER_STALKS -> REMOVE_FLOWER_STALKS
            GrowingTip.DIVIDE_EVERY_FEW_YEARS -> DIVIDE_EVERY_FEW_YEARS
            GrowingTip.DIVIDE_BULBS -> DIVIDE_BULBS
            GrowingTip.NEEDS_CONSTANT_MOISTURE -> NEEDS_CONSTANT_MOISTURE
            GrowingTip.AQUATIC_FRIENDLY -> AQUATIC_FRIENDLY
            GrowingTip.HARVEST_AFTER_FROST -> HARVEST_AFTER_FROST
            GrowingTip.CONTAIN_SPREAD -> CONTAIN_SPREAD
            GrowingTip.NEEDS_SPACE -> NEEDS_SPACE
            GrowingTip.FULL_MATURITY_FOR_STORAGE -> FULL_MATURITY_FOR_STORAGE
            GrowingTip.HARVEST_IN_FALL_OR_SPRING -> HARVEST_IN_FALL_OR_SPRING
            GrowingTip.NEEDS_LONG_SEASON -> NEEDS_LONG_SEASON
            GrowingTip.PROPER_PROCESSING_REQUIRED -> PROPER_PROCESSING_REQUIRED
            GrowingTip.SUBMERGED_PLANTING -> SUBMERGED_PLANTING
            GrowingTip.SPECIAL_GROWING_CONDITIONS -> SPECIAL_GROWING_CONDITIONS
            GrowingTip.SLOW_GROWING -> SLOW_GROWING
            GrowingTip.WAIT_FOR_WARM_SOIL -> WAIT_FOR_WARM_SOIL
            GrowingTip.AVOID_RICH_SOIL -> AVOID_RICH_SOIL
            GrowingTip.SHALLOW_PLANTING -> SHALLOW_PLANTING
            GrowingTip.EDIBLE_ROOTS_ONLY -> EDIBLE_ROOTS_ONLY
            GrowingTip.LONG_GROWING_SEASON -> LONG_GROWING_SEASON
            GrowingTip.PREVENT_FLOWERING -> PREVENT_FLOWERING
            GrowingTip.ACIDIC_FLAVOR -> ACIDIC_FLAVOR
            GrowingTip.CELERY_FLAVOR -> CELERY_FLAVOR
            GrowingTip.SIMILAR_TO_ARTICHOKE -> SIMILAR_TO_ARTICHOKE
            GrowingTip.INVASIVE_TENDENCIES -> INVASIVE_TENDENCIES
            GrowingTip.PEST_RESISTANT -> PEST_RESISTANT
            GrowingTip.COLORFUL_TUBERS -> COLORFUL_TUBERS
            GrowingTip.PLANT_WHOLE_FRUIT -> PLANT_WHOLE_FRUIT
            GrowingTip.PERENNIAL_IN_TROPICS -> PERENNIAL_IN_TROPICS
            GrowingTip.MEDICINAL_PROPERTIES -> MEDICINAL_PROPERTIES
            GrowingTip.EDIBLE_WHEN_YOUNG -> EDIBLE_WHEN_YOUNG
            GrowingTip.DRY_FOR_SPONGES -> DRY_FOR_SPONGES
            GrowingTip.ALL_PARTS_EDIBLE -> ALL_PARTS_EDIBLE
            GrowingTip.NUTRITIOUS_LEAVES -> NUTRITIOUS_LEAVES
            GrowingTip.TREE_VEGETABLE -> TREE_VEGETABLE
            GrowingTip.PLANT_MULTIPLES -> PLANT_MULTIPLES
            GrowingTip.HARVEST_WHEN_HUSKS_SPLIT -> HARVEST_WHEN_HUSKS_SPLIT
            GrowingTip.REMOVE_HUSKS_BEFORE_USE -> REMOVE_HUSKS_BEFORE_USE
            GrowingTip.SAPONIN_REMOVAL -> SAPONIN_REMOVAL
            GrowingTip.EDIBLE_LEAVES -> EDIBLE_LEAVES
            GrowingTip.GRAIN_AND_LEAF_CROP -> GRAIN_AND_LEAF_CROP
            GrowingTip.QUICK_GROWING -> QUICK_GROWING
            GrowingTip.EXCELLENT_COVER_CROP -> EXCELLENT_COVER_CROP
            GrowingTip.ATTRACTS_POLLINATORS -> ATTRACTS_POLLINATORS
            GrowingTip.IMPROVES_SOIL -> IMPROVES_SOIL
            GrowingTip.SEED_CLEANING_REQUIRED -> SEED_CLEANING_REQUIRED
            GrowingTip.BIRD_PROTECTION_NEEDED -> BIRD_PROTECTION_NEEDED
            GrowingTip.OIL_AND_FIBER_CROP -> OIL_AND_FIBER_CROP
            GrowingTip.HARVEST_FOR_SEEDS -> HARVEST_FOR_SEEDS
            GrowingTip.FORCED_FOR_CHICONS -> FORCED_FOR_CHICONS
            GrowingTip.COFFEE_SUBSTITUTE -> COFFEE_SUBSTITUTE
            GrowingTip.BITTER_FLAVOR -> BITTER_FLAVOR
            GrowingTip.MULTIPLE_ROOTS -> MULTIPLE_ROOTS
            GrowingTip.SWEET_FLAVOR -> SWEET_FLAVOR
            GrowingTip.MULTI_USE_PLANT -> MULTI_USE_PLANT
            GrowingTip.SPINACH_SUBSTITUTE -> SPINACH_SUBSTITUTE
            GrowingTip.SLOW_TO_ESTABLISH -> SLOW_TO_ESTABLISH
            GrowingTip.COASTAL_NATIVE -> COASTAL_NATIVE
            GrowingTip.SALT_TOLERANT -> SALT_TOLERANT
            GrowingTip.HARVEST_STEMS_AND_LEAVES -> HARVEST_STEMS_AND_LEAVES
            GrowingTip.HEAT_TOLERANT_BRASSICA -> HEAT_TOLERANT_BRASSICA
            GrowingTip.EDIBLE_FLOWERS -> EDIBLE_FLOWERS
            GrowingTip.PEST_DETERRENT -> PEST_DETERRENT
            GrowingTip.COLORFUL_LEAVES -> COLORFUL_LEAVES
            GrowingTip.SELF_SEEDING -> SELF_SEEDING
            GrowingTip.HUMIDITY_TOLERANT -> HUMIDITY_TOLERANT
            GrowingTip.MUCILAGINOUS_TEXTURE -> MUCILAGINOUS_TEXTURE
            GrowingTip.FAST_GROWING -> FAST_GROWING
            GrowingTip.SHORT_DAY_TUBER_FORMATION -> SHORT_DAY_TUBER_FORMATION
            GrowingTip.BIRD_PROTECTION -> BIRD_PROTECTION
            GrowingTip.INOCULANT_BENEFICIAL -> INOCULANT_BENEFICIAL
            GrowingTip.DROUGHT_TOLERANT -> DROUGHT_TOLERANT
            GrowingTip.UNRECOGNIZED -> throw IllegalArgumentException("Unknown GrowingTip: $network")
        }
    }
}